[package]
name = "dodotenv"
version = "0.1.1-nightly"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"
description = "Load .env and run program."
repository = "https://github.com/yskszk63/dodotenv/"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.28"
structopt = "0.3.12"

[profile.release]
panic = "abort"
